semantics/tests/parser/invalid/parse_invalid_binary_integer_literal_with_leading_underscore.fpl
let binary = 0b_101010_101010